--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -307,8 +307,8 @@ Theoretical risk $P(\neg{}E|\neg{}H)$ is deeply connected with statistical metho
 Because many researchers are familiar with the type-I error rate, it can be helpful to remember this connection to theoretical risk.
 Researchers who choose a smaller type-I error rate can be more sure of their results, if significant, because the theoretical risk is higher.
 However, this connection should not be overinterpreted for two reasons.
-First, accorindg to NHST, the absence of a significant result should not be interpreted as evidence against the hypothesis[@citation-needed].
-Second, the research hypothesis seldomly equals  the statistical alternative hypothesis.
+First, according to most interpretations of null hypothesis testing, the absence of a significant result should not generally be interpreted as evidence against the hypothesis [@mayoStatisticalInferenceSevere2018, 5.3].
+Second, the research hypothesis seldomly equals the statistical alternative hypothesis.
 We argue that theoretical risk (and hence its complement, $P(E|\neg{}H)$) also encompasses factors outside the statistical realm, most notably the study design and broader analytical strategies.
 
 Statistical methods stand out among these factors because we have a large and well-understood toolbox for assessing and controlling their contribution to theoretical risk.
