--- a/references.bib
+++ b/references.bib
@@ -560,3 +560,16 @@
   doi = {10.31234/osf.io/cs8wb},
   keywords = {Bayesian,confirmation,exploration,hypothesis testing,Meta-science,Open Science,preregistration,Quantitative Methods,Social and Behavioral Sciences,Theory and Philosophy of Science},
 }
+
+@book{mayoStatisticalInferenceSevere2018,
+  title = {Statistical {{Inference}} as {{Severe Testing}}: {{How}} to {{Get Beyond}} the {{Statistics Wars}}},
+  shorttitle = {Statistical {{Inference}} as {{Severe Testing}}},
+  author = {Mayo, Deborah G.},
+  year = {2018},
+  month = sep,
+  edition = {First},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/9781107286184},
+  urldate = {2023-05-12},
+  isbn = {978-1-107-28618-4 978-1-107-05413-4 978-1-107-66464-7}
+}
