--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -80,6 +80,11 @@ repro:
     - rsync
     - curl
     - inkscape
+note: |
+  The materials for this article are available on [GitHub](https://github.com/aaronpeikert/bayes-prereg) [@zenodo-release].
+  This version was created from git commit ``r repro::current_hash(backend = "gert")``.
+  The manuscript is available as [preprint](https://www.doi.org/10.31234/osf.io/cs8wb) [@peikertWhyDoesPreregistration2023] and was submitted to [Psychological Methods](https://www.apa.org/pubs/journals/).
+
 ---
 
 ```{r, include = FALSE}
@@ -567,12 +572,6 @@ Clearly communicating theoretical risk is important because it reduces the uncer
 
 We thank Leo Richter, Caspar van Lissa, Felix Schönbrodt, the discussants at the DGPS2022 conference and Open Science Center Munich, and many more for the insightful discussions about disentangling preregistration and confirmation.
 We are grateful to Julia Delius for her helpful assistance in language and style editing.
-
-# Notes {-}
-
-The materials for this article are available on [GitHub](https://github.com/aaronpeikert/bayes-prereg) [@zenodo-release].
-This version was created from git commit ``r repro::current_hash(backend = "gert")``.
-The manuscript is available as [preprint](https://www.doi.org/10.31234/osf.io/cs8wb) [@peikertWhyDoesPreregistration2023] and was submitted to [Philosophical Psychology](https://www.tandfonline.com/journals/cphp20).
 
 \newpage
 
