Revert "remove maximilian, he has to approve"
This reverts commit 91b5a9cc9422454737f34a2191e955a4c7785668.

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -18,6 +18,12 @@ author:
       - Software
       - Visualization
       - Project administration
+  - name: Maximilian S. Ernst
+    affiliation: "3"
+    role:
+      - Writing---Review & Editing
+      - Formal analysis
+      - Validation
   - name: Andreas M. Brandmaier
     affiliation: "1, 2, 4"
     role:
