--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -37,6 +37,8 @@ output:
   papaja::apa6_pdf:
     latex_engine: xelatex
 header-includes: |
+  \usepackage[utf8]{inputenc}
+  
   \raggedbottom
   \makeatletter
   
